--- a/products.css
+++ b/products.css
@@ -4,15 +4,27 @@ body{
 .main{
     width: 75%;
     margin: auto;
-    border: 1px red solid;
+    /* border: 1px red solid; */
     height: auto;
     display: flex;
     justify-content:space-evenly;
 }
 .left_side{
     width: 22%;
-    border: 1px blue solid;
+    /* border: 1px blue solid; */
     height: 100%;
+}
+.vl {
+    border-left: 1px solid #dfdfdf;
+    height: auto;
+  }
+.top_section~h4{
+    border-bottom: 1px solid #dfdfdf;
+    padding-bottom: 5px;
+}
+.top_section~h4>span{
+    border-bottom: 2px solid #84c225;
+    padding-bottom: 5px;
 }
 .category>h4>span
     {   
@@ -36,12 +48,12 @@ body{
 .right_side{
     width: 73%;
     height: max-content;
-    border: 1px green solid;
+    /* border: 1px green solid; */
 }
 .top_section{
     width: 100%;;
     height: 100px;
-    border:  1px blue solid;
+    /* border:  1px blue solid; */
     display: flex;
     justify-content: space-between;
 }
@@ -59,13 +71,13 @@ body{
 .bottom_section{
     height: auto;
     width: 100%;
-    border: 1px red solid;
+    /* border: 1px red solid; */
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 10px;
 }
 .items{
-    border: 1px blue solid;
+    /* border: 1px blue solid; */
     height: 300px;
     width: 97%;
 }
@@ -73,3 +85,38 @@ body{
     margin: 0;
     padding: 0;
 }
+.cate label:hover,.cate li:hover{
+ color: #62a154;
+ cursor: pointer;
+}
+.bottom_section>div{
+    margin: 10px;
+    text-align: center;
+    box-shadow: 1px 2px #efe9e9;
+    padding-bottom: 15px;
+}
+.bottom_section>div>button{ 
+     text-transform: uppercase;
+       width: 30%;
+     border-radius: 4px;
+    border: 1px solid #fee67c;
+     background: #fee67c;
+    background: linear-gradient(180deg,#fee67c 0,#f2cb76);
+    padding: 0;
+    margin-left: 4px;
+    height: 22px;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+  .bottom_section>div>img{
+        width: 90%;
+        border: 0.2px solid rgb(238, 238, 238);
+        /* width: 249px; */
+        border-radius: 10px;
+        /* height: 249px; */
+        box-shadow: 1px 2px #efe9e9;
+  }
