--- a/cart.css
+++ b/cart.css
@@ -4,32 +4,77 @@
   margin: auto;
   background-color: white;
 }
-#body_container>h1{
-    color: rgb(5, 182, 5);
-    margin-left: 2%;
-    margin-top: 2%;
+#body_container > h1 {
+  color: rgb(5, 182, 5);
+  margin-left: 2%;
+  margin-top: 1%;
 }
-#body_container>span:nth-child(2){
-    margin-left: 2%;
+#body_container > span:nth-child(2) {
+  margin-left: 2%;
 }
 #body_container > button {
   margin-left: 70%;
+}
+.empty_cart {
+  appearance: none;
+  background-color: #ffffff;
+  border-radius: 40em;
+  border-style: none;
+  box-shadow: #05e62e66 0 -12px 6px inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -0.24px;
+  margin: 0;
+  outline: none;
+  padding: 1rem 1.3rem;
+  quotes: auto;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 
-}
-#body_container > button:hover{
-    cursor: pointer;
-}
-#empty_cart{
-    margin-left:85%;
-}
-#empty_btn:hover + #empty_cart{
-    display: block;
-    color: rgb(3, 169, 3);
+.empty_cart:hover {
+  background-color: #ee0505;
+  box-shadow: #dafd0f 0 -6px 8px inset;
+  transform: scale(1.125);
 }
 
-#body_container > button>img{
-    width: 15%;
-    height: 20%;
+.empty_cart:active {
+  transform: scale(1.025);
+}
+
+@media (min-width: 768px) {
+  .empty_cart {
+    font-size: 1.5rem;
+    padding: 0.75rem 2rem;
+  }
+}
+#body_container > button:hover {
+  cursor: pointer;
+  /* box-shadow: rgba(223, 4, 4, 0.432) 0px 54px 55px, rgba(223, 4, 4, 0.432) 0px -12px 30px, rgba(223, 4, 4, 0.432) 0px 4px 6px, rgba(223, 4, 4, 0.432) 0px 12px 13px, rgba(223, 4, 4, 0.432) 0px -3px 5px; */
+}
+#empty_cart {
+  margin-left: 85%;
+}
+#empty_btn:hover + #empty_cart {
+  display: block;
+  color: rgb(3, 169, 3);
+}
+
+#body_container > button > img {
+  width: 15%;
+  height: 20%;
+}
+#body_container>span:nth-child(2){
+    font-size: 20px;
 }
 #nav_total_item {
   font-size: 40px;
@@ -40,68 +85,245 @@ body {
 #basket_options {
   display: flex;
   justify-content: space-around;
-  background-color: grey;
+  background-color: rgb(5, 182, 5);
   color: white;
   padding: 1.3%;
+  font-size: 20px;
 }
 #basket_options_items {
-  display: flex;
+  /* display: flex; */
   justify-content: space-around;
   /* background-color: grey; */
   color: black;
   padding: 1.3%;
 }
+#basket_options_items > div {
+  display: flex;
+  justify-content: space-around;
+}
+
 #count {
   padding: 2px;
   border: 1px solid red;
   background-color: antiquewhite;
 }
-#quantity>span{
-    border: 1px solid red;
+#quantity > span {
+  border: 1px solid red;
 }
-#basket_checkout_info{
-    display: flex;
-    justify-content: space-around;
+#basket_checkout_info {
+  display: flex;
+  justify-content: space-around;
 }
-#combo_offer{
-    /* border: 1px solid rgb(8, 159, 8); */
-    height: auto;
-    width: 10%;
-    border-radius: 10px 10px 10px 10px;
-    text-align: center;
-    /* box-shadow: rgba(4, 118, 13, 0.35) 0px 5px 15px; */
-    box-shadow: rgba(4, 102, 1, 0.25) 0px 54px 55px,  rgba(4, 102, 1, 0.25) 0px -12px 30px,  rgba(4, 102, 1, 0.25) 0px 4px 6px, rgba(4, 102, 1, 0.25) 0px 12px 13px,  rgba(4, 102, 1, 0.25) 0px -3px 5px;
-    color: green;
+#combo_offer {
+  /* border: 1px solid rgb(8, 159, 8); */
+  height: auto;
+  width: 10%;
+  border-radius: 10px 10px 10px 10px;
+  text-align: center;
+  border: 1px solid rgb(8, 159, 8);
+  /* box-shadow: rgba(4, 118, 13, 0.35) 0px 5px 15px; */
+  /* box-shadow: rgba(4, 102, 1, 0.25) 0px 54px 55px,  rgba(4, 102, 1, 0.25) 0px -12px 30px,  rgba(4, 102, 1, 0.25) 0px 4px 6px, rgba(4, 102, 1, 0.25) 0px 12px 13px,  rgba(4, 102, 1, 0.25) 0px -3px 5px; */
+  color: green;
 }
-#combo_offer>p:nth-child(1){
-    font-weight: bold;
+#combo_offer > p:nth-child(1) {
+  font-weight: bold;
 }
-#checkout_details{
-    width: 60%;
-    border: 1px solid rgb(73, 72, 72);
-    /* padding-left: 5%; */
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: rgba(4, 102, 1, 0.25) 0px -50px 36px -28px inset;
+#checkout_details {
+  width: 60%;
+  border: 1px solid rgb(73, 72, 72);
+  /* padding-left: 5%; */
+  padding-bottom: 1%;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: rgba(4, 102, 1, 0.25) 0px -50px 36px -28px inset;
 }
-#checkout_details>span{
-    margin-left: 5%;
+#checkout_details > span {
+  margin-left: 5%;
 }
-#checkout_details>button{
-    width: 20%;
+#checkout_details > button {
+  width: 20%;
+  margin-left: 70%;
+  padding: 10px 20px 10px 20px;
+  border-radius: 10px 10px 10px 10px;
+  border: none;
+  background-color: rgb(242, 193, 0);
+  font-weight: bold;
+  font-size: 17px;
+  margin-bottom: 2%;
+}
+#checkout_details > span:nth-child(3){
     margin-left: 70%;
-    padding: 10px 20px 10px 20px;
-    border-radius: 10px 10px 10px 10px;
-    border: none;
-    background-color: rgb(242, 193, 0);
-    font-weight: bold;
-    font-size: 17px;
-    margin-bottom: 2%;
 }
-#checkout_details>span:nth-child(9){
-    font-weight: bold;
-    font-size: 40px;
+#checkout_details > span:nth-child(7){
+    margin-left: 65%;
 }
-#checkout_details>span:nth-child(10){
-    font-weight: bold;
-    font-size: 40px;
+#checkout_details > span:nth-child(9) {
+  font-weight: bold;
+  font-size: 40px;
+}
+#checkout_details > span:nth-child(10) {
+  font-weight: bold;
+  font-size: 40px;
+  margin-left: 59%;
+}
+
+/* CSS */
+.button-57 {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #18181a;
+  color: #18181a;
+  display: inline-block;
+  font-size: 15px;
+  line-height: 15px;
+  padding: 20px 30px 20px 30px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #fff;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 2%;
+}
+
+.button-57 span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
+}
+
+.button-57 span:last-child {
+  color: white;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 100;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateY(225%) translateX(-50%);
+  height: 14px;
+  line-height: 13px;
+}
+
+.button-57:after {
+  content: "";
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(34, 65, 34);
+  color: black;
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
+}
+
+.button-57:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
+}
+
+.button-57:hover span:last-child {
+  transform: translateX(-50%) translateY(-100%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+#missed_deals {
+  margin-top: 5%;
+}
+#missed_deals > h1 {
+  margin-left: 10px;
+}
+
+#products_missed {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+#products_missed img {
+  width: 70%;
+}
+#products_missed_child {
+  border: 1px solid black;
+  width: 20%;
+}
+#products_missed_child:hover {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+
+/* CSS */
+.button-86 {
+  all: unset;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button-86::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #039322;
+  border-radius: 10px;
+}
+
+.button-86::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button-86:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button-86:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button-86:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+.button-86{
+    margin-top: 20px;
+    margin-left: 8%;
 }
