--- a/cart.css
+++ b/cart.css
@@ -2,6 +2,7 @@
   width: 80%;
   border: 1px dotted solid red;
   margin: auto;
+  margin-top: 35px;
   background-color: white;
 }
 #body_container > h1 {
@@ -26,8 +27,8 @@
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system, sans-serif;
-  font-size: 1.2rem;
-  font-weight: 700;
+  font-size: 0.5rem;
+  font-weight: 500;
   letter-spacing: -0.24px;
   margin: 0;
   outline: none;
@@ -39,6 +40,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-top: -70px;
 }
 
 .empty_cart:hover {
@@ -79,9 +81,7 @@
 #nav_total_item {
   font-size: 40px;
 }
-body {
-  background-color: rgb(232, 230, 229);
-}
+
 #basket_options {
   display: flex;
   justify-content: space-around;
@@ -116,8 +116,8 @@ body {
 }
 #combo_offer {
   /* border: 1px solid rgb(8, 159, 8); */
-  height: auto;
-  width: 10%;
+  height: 300px;
+  width: 15%;
   border-radius: 10px 10px 10px 10px;
   text-align: center;
   border: 1px solid rgb(8, 159, 8);
