--- a/Styles/homepage.css
+++ b/Styles/homepage.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0px;
     padding: 0px;
@@ -9,9 +10,12 @@
     width: 100%;
     height: 150px;
     padding: 0%;
+    position: fixed;
+    top: 0%;
+    background-color: whitesmoke;
 }
 #heading img{
-    width: 160px;
+    width: 120px;
     margin-left: 7%;
     height: 120px;
     margin-top: 1%;
@@ -21,6 +25,7 @@
     height: 0px;
     display: flex;
     flex-direction: row-reverse;
+    background-color: whitesmoke;
 }
 #heading_main1 p{
     color: #b2b2b2;
@@ -79,25 +84,28 @@
 }
 
 #dropdown_list{
-    width: 12%;
-    height: 20%;
+    width: 10.4%;
+    height: 4%;
+    margin-top: 3%;
     background-color: #84c225;
     padding-top: 4px;
-    margin-left: 150px;
+    margin-left: -70px;
     border-radius: 3px;
-    padding-left: 30px;
+    position: fixed;
+    text-align: center;
 }
 #dropdown_list a{
     color: white;
     text-decoration: none;
     font-size: 12px;
     cursor: pointer;
+    text-align: center;
 }
 #drop1{
     display: none;
     background-color: white;
-    margin-left : -30px;
-    margin-top: 5%;
+    margin-left : 10px;
+    margin-top: 7%;
 }
 #dropdown_list:hover #drop1{
     display: block;
@@ -120,11 +128,11 @@
     background-color: lightgray;
 }
 #offers{
-    width:12%;
-    height: 19%;
+    width:8%;
+    height: 17%;
     text-align: center;
-    margin-left: 22%;
-    margin-top: -29px;
+    margin-left: -58%;
+    margin-top: 47px;
     border-radius: 3px;
 }
 #offers p{
@@ -134,13 +142,13 @@
 }
 #offers p:hover{
     cursor: pointer;
-    background-color: #84c225;
     border-radius: 3px;
-    color: white;
+    color: yellowgreen;
 }
 
 #bodyy{
     width: 100%;
+    margin-top: 14%;
 }
 
 #container
@@ -365,7 +373,6 @@
 #Brand_id img:hover{
     box-shadow: 5px 5px 10px 10px grey;
 }
-
 
 
 #read_me{
