--- a/cart.css
+++ b/cart.css
@@ -68,7 +68,7 @@
 }
 #empty_btn:hover + #empty_cart {
   display: block;
-  color: rgb(3, 169, 3);
+  color: #84C225;
 }
 
 #body_container > button > img {
@@ -85,7 +85,7 @@
 #basket_options {
   display: flex;
   justify-content: space-around;
-  background-color: rgb(5, 182, 5);
+  background-color: #84C225;
   color: white;
   padding: 1.3%;
   font-size: 20px;
@@ -100,6 +100,25 @@
 #basket_options_items > div {
   display: flex;
   justify-content: space-around;
+  text-align: center;
+}
+#basket_options_items > div>div{
+  width: 30%;
+}
+#basket_options_items > div>div>button{
+  padding: 0px 5px 0px 5px;
+  font-weight: bold;
+  background-color: #00ff375c;
+  border-radius: 40%;
+  
+}
+#basket_options_items > div>div>button:hover{
+  background-color: #04b32a;
+  cursor: pointer;
+}
+#basket_options_items > div>div>span{
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #count {
@@ -116,7 +135,7 @@
 }
 #combo_offer {
   /* border: 1px solid rgb(8, 159, 8); */
-  height: 300px;
+  height: 260px;
   width: 15%;
   border-radius: 10px 10px 10px 10px;
   text-align: center;
@@ -124,9 +143,14 @@
   /* box-shadow: rgba(4, 118, 13, 0.35) 0px 5px 15px; */
   /* box-shadow: rgba(4, 102, 1, 0.25) 0px 54px 55px,  rgba(4, 102, 1, 0.25) 0px -12px 30px,  rgba(4, 102, 1, 0.25) 0px 4px 6px, rgba(4, 102, 1, 0.25) 0px 12px 13px,  rgba(4, 102, 1, 0.25) 0px -3px 5px; */
   color: green;
+  box-shadow: rgba(4, 102, 1, 0.25) 0px -50px 36px -28px inset;
+
 }
 #combo_offer > p:nth-child(1) {
   font-weight: bold;
+}
+#combo_offer > p{
+  margin: 10px;
 }
 #checkout_details {
   width: 60%;
@@ -247,11 +271,22 @@
 #products_missed img {
   width: 70%;
 }
-#products_missed_child {
+#products_missed>div {
   border: 1px solid black;
   width: 20%;
+  padding-bottom: 10px;
+  border-radius: 10px 10px 10px 10px;
 }
-#products_missed_child:hover {
+#products_missed>div>button{
+  background-color: #facd05;
+  padding: 5px 10px 5px 10px;
+  border-radius: 10px 10px 10px 10px;
+}
+#products_missed>div>button:hover{
+  background-color: #5e4d0367;
+  cursor: pointer;
+}
+#products_missed>div:hover {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
     rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
@@ -268,7 +303,7 @@
   color: #f0f0f0;
   cursor: pointer;
   z-index: 1;
-  padding: 10px 20px;
+  padding: 10px 25px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -276,6 +311,8 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  color: #000000;
+  font-weight: bold;
 }
 
 .button-86::after,
@@ -286,14 +323,16 @@
   right: 0;
   z-index: -99999;
   transition: all .4s;
+  color: #000000;
 }
 
 .button-86::before {
   transform: translate(0%, 0%);
   width: 100%;
   height: 100%;
-  background: #039322;
+  background: #84C225;
   border-radius: 10px;
+  color: #000000;
 }
 
 .button-86::after {
@@ -304,12 +343,14 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border-radius: 50px;
+  color: #000000;
 }
 
 .button-86:hover::before {
   transform: translate(5%, 20%);
   width: 110%;
   height: 110%;
+  color: #000000;
 }
 
 .button-86:hover::after {
@@ -317,11 +358,13 @@
   transform: translate(0, 0);
   width: 100%;
   height: 100%;
+  color: #000000;
 }
 
 .button-86:active::after {
   transition: 0s;
   transform: translate(0, 5%);
+  color: #000000;
 }
 .button-86{
     margin-top: 20px;
