--- a/products.css
+++ b/products.css
@@ -2,8 +2,9 @@ body{
        font-family:Arial, Helvetica, sans-serif;
      }
 .main{
-    width: 75%;
+    width: 80%;
     margin: auto;
+    margin-top: 50px;
     /* border: 1px red solid; */
     height: auto;
     display: flex;
@@ -32,8 +33,8 @@ body{
             padding-bottom: 5px;
         }
 .category p{
-    margin-bottom: -15px;
-    margin-left: 20px;
+    margin-bottom: 0;
+    margin-left: -13px;
     color: #62a154;
 }        
 .cate{
