--- a/adminpanel.css
+++ b/adminpanel.css
@@ -133,6 +133,7 @@ table, th, td {
     border-radius: 10px;
     /* height: 249px; */
     box-shadow: 1px 2px #efe9e9;
+    border-radius: 25px 30px;
 }
 .bottom_section>div>button{ 
     text-transform: uppercase;
@@ -155,6 +156,8 @@ table, th, td {
     text-align: center;
     box-shadow: 1px 2px #efe9e9;
     padding-bottom: 15px;
+    border-radius: 25px 30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .bottom_section{
