--- a/cart.css
+++ b/cart.css
@@ -5,6 +5,9 @@
   margin-top: 35px;
   background-color: white;
 }
+body{
+  font-family: 'Roboto', sans-serif;
+}
 #body_container > h1 {
   color: rgb(5, 182, 5);
   margin-left: 2%;
