--- a/payment.css
+++ b/payment.css
@@ -1,6 +1,7 @@
-body {
-    margin: 0px;
-  }
+body{
+  font-family: 'Roboto', sans-serif;
+  margin: 0px;
+}
   #head {
     width: 100%;
     height: 100px;
