--- a/products.css
+++ b/products.css
@@ -1,6 +1,6 @@
 body{
-       font-family:Arial, Helvetica, sans-serif;
-     }
+    font-family: 'Roboto', sans-serif;
+  }
 .main{
     width: 80%;
     margin: auto;
