--- a/address.css
+++ b/address.css
@@ -290,7 +290,8 @@ body{
     color: black;
     font-size: 13px;
     text-align: center;
-    padding-top: 10px;
+    /* padding: 8px; */
+    padding-bottom: 7px;
     margin-top: 20px;
     margin-right: 18px;
   }
